--- a/src/styles/components/_logo.scss
+++ b/src/styles/components/_logo.scss
@@ -1,12 +1,10 @@
 .logo {
   display: flex;
-  position: absolute;
-  top: 5px;
-  left: 50%;
-  transform: translate(-50%);
+  margin: 0 auto;
+
   background: url(../asset/main.jpg) center/cover;
   height: 60px;
-  width: 200px;
+  width: 100%;
   align-items: center;
   justify-content: center;
   border-radius: 10px;
