--- a/src/styles/components/_logo.scss
+++ b/src/styles/components/_logo.scss
@@ -11,7 +11,8 @@
   box-shadow: 0px 1px 2px 0px rgba(51, 51, 51, 0.5);
 
   h3 {
-    color: $color-2;
+    color: $color-1;
+    text-shadow: 0 0 2px black;
     letter-spacing: 1px;
   }
 
