--- a/src/styles/components/_logo.scss
+++ b/src/styles/components/_logo.scss
@@ -1,6 +1,6 @@
 .logo {
   display: flex;
-  margin: 0 auto;
+  margin: 1rem auto 0 auto;
 
   background: url(../asset/main.jpg) center/cover;
   height: 60px;
