:FEAT: => affichage pays + correction scss

--- a/src/styles/components/_countries.scss
+++ b/src/styles/components/_countries.scss
@@ -1,4 +1,9 @@
 .countries {
+
+  display: flex;
+  align-content: center;
+  align-items: center;
+
   .sort-container {
     display: grid;
     grid-template-columns: 20% 80%;
