--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,6 +1,7 @@
 @import "./settings";
 @import "./components/navigation";
 @import "./components/logo";
-@import "./components/countries";
 @import "./components/card";
-@import "./components/error";
+@import "./components/countries";
+@import "./pages/news";
+@import "./components/article";
