:REFACTOR: => Correction style & js sur nav news article, et fausse db

--- a/src/styles/components/_logo.scss
+++ b/src/styles/components/_logo.scss
@@ -2,7 +2,7 @@
   display: flex;
   margin: 1rem auto 0 auto;
 
-  background: url(../asset/main.jpg) center/cover;
+  background: #282c34;
   height: 60px;
   width: 100%;
   align-items: center;
