--- a/src/styles/components/_article.scss
+++ b/src/styles/components/_article.scss
@@ -8,7 +8,11 @@
   .card-header {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     margin: 5px 0 10px;
+    padding: 0 10px;
+    border-radius: 3px;
+    background: $color-1;
 
     em {
       font-size: 0.8rem;
@@ -30,11 +34,14 @@
     margin: 10px 0 5px;
 
     button {
-      width: 70px;
-      height: 20px;
+      width: 90px;
+      height: 30px;
       font-size: 0.7rem;
-      margin: 0 2px;
+      font-weight: 600;
+      letter-spacing: 1px;
+      margin: 10px 2px 0 2px;
       cursor: pointer;
+      background: $color-1;
 
       &:hover {
         filter: brightness(110%);
