--- a/src/styles/components/_countries.scss
+++ b/src/styles/components/_countries.scss
@@ -1,16 +1,28 @@
 .countries {
 
+  &::after {
+    content: '';
+    display: block;
+    margin: 1.8rem auto 1rem auto;
+    background: $color-1;
+    height: 2px;
+
+    width: 50%;
+  }
+
   .sort-container {
     display: grid;
     grid-template-columns: 20% 80%;
     padding: 8px;
     height: 40px;
     margin-bottom: 1.5rem;
+    border: 1px solid $color-1;
     border-radius: 15px;
     background: $color-3;
     color: $color-1;
     box-shadow: 0 2px 2px rgba(51, 51, 51, 0.3);
-    
+
+
     
     ul {
       display: flex;
@@ -20,13 +32,15 @@
         transform: translate(-5px, 1px);
       }
     }
+
   }
   .cancel {
     margin: 20px auto 30px;
     width: 100%;
+    color: white;
 
     h5 {
-      border: 1px $color-3 solid;
+      border: 1px white solid;
       text-align: center;
       width: 180px;
       margin: 0 auto;
@@ -44,5 +58,6 @@
   .countries-list {
     display: flex;
     flex-wrap: wrap;
+    margin-top: 3rem;
   }
 }
