--- a/src/styles/pages/_news.scss
+++ b/src/styles/pages/_news.scss
@@ -7,21 +7,34 @@
     display: grid;
     min-width: 400px;
     text-align: center;
-    width: 50%;
-    max-width: 600px;
+    width: 100%;
     margin: 0 auto;
+
+    &::after {
+      content: '';
+      display: block;
+      margin: 3rem auto 1rem auto;
+      background: $color-1;
+      height: 2px;
+
+      width: 50%;
+    }
 
     input,
     textarea {
-      margin: 5px 0;
+      margin: 5px 50px;
       padding: 5px;
       border-radius: 5px;
-      border: 1px solid $color-1;
+      border: 3px solid $color-1;
       resize: none;
       box-shadow: 0 2px 6px rgba(0, 0, 0, 0.05);
+      outline: none;
     }
     textarea {
-      height: 80px;
+      height: 150px;
+    }
+    input {
+      height: 35px;
     }
     p {
       font-size: 0.8rem;
